[fix] devise-css修正

--- a/app/views/layouts/_error_messages.html.slim
+++ b/app/views/layouts/_error_messages.html.slim
@@ -1,5 +1,5 @@
 - if obj.errors.include?(column)
-  ul.error_explanation
+  ul.error_explanation.list-unstyled
     - obj.errors.full_messages_for(column).each do |message|
       li.text-danger.small.mt-1.ml-4
         = message
