[add] devise-ゲストログイン実装

--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -34,4 +34,6 @@
         = f.submit t(".sign_up"), class:"btn btn-primary btn-block"
     .my-3
       = render "devise/shared/links"
-
+      .text-right.mt-3
+        span ゲストログインは
+        =link_to "こちら", users_guest_sign_in_path, method: :post, class:"text-primary"
