--- a/app/views/timelines/index.html.slim
+++ b/app/views/timelines/index.html.slim
@@ -8,7 +8,7 @@
       - if @timelines.present?
         = render "timeline", timelines: @timelines
       - else
-        p.text-center
-        | タイムラインには何もありません
+        .col-md-10.mx-auto
+          p.text-center タイムラインには何もありません
 
 
