--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,7 +34,10 @@ body{
  font-family: "Hiragino Kaku Gothic ProN","Hiragino Sans",'Noto Sans JP', sans-serif, "Kosugi";
 
 }
-
+// devise
+.btn-twitter{
+  background-color:#1da1f2;
+}
 // headerページ
 header{
   background-color: white;
