--- a/app/views/devise/shared/_links.html.slim
+++ b/app/views/devise/shared/_links.html.slim
@@ -13,7 +13,16 @@
 - if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks'
   = link_to t("didn_t_receive_unlock_instructions"), new_unlock_path(resource_name)
   br
+
+hr
+p または
 - if devise_mapping.omniauthable?
   - resource_class.omniauth_providers.each do |provider|
-    = link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), method: :post
-    br
+    = link_to omniauth_authorize_path(resource_name, provider), method: :post, class:"btn btn-block btn-twitter text-white " do
+      i.fab.fa-twitter.mr-3
+      = t(".sign_in_with_provider", provider: provider)
+.text-right.mt-3
+  span ゲストログインは
+  =link_to "こちら", users_guest_sign_in_path, method: :post, class:"text-primary"
+
+
