--- a/app/views/users/_follow.html.slim
+++ b/app/views/users/_follow.html.slim
@@ -1,19 +1,19 @@
 - user.followings.each do |follow_user|
   .col-md-4.mt-4
-    .bg-white.p-3.border
+    .bg-white.p-3.border.w-100.h-100
       .d-flex
         = link_to user_path(follow_user.id) do
           = attachment_image_tag follow_user, :image, :fill, 80, 80, fallback:"noimage.jpg", size: "80x80", class: "rounded-circle shadow-sm mr-4"
         .d-flex.flex-column
           strong.d-flex.flex-row
             = link_to follow_user.name, user_path(follow_user.id), class:"text-dark mr-3"
-            - unless follow_user == current_user
-              .follow_ajax_btn
-                = render "relationships/follow_btn", user: follow_user
-          small.mt-3
-            = simple_format(follow_user.introduction.truncate(30))
+          small.mb-5
+            - if follow_user.introduction
+              = simple_format(follow_user.introduction.truncate(20))
+            - else
+              = simple_format(follow_user.introduction)
 
-      .d-flex.mt-3
+      .d-flex.mt-5
         .flex-column.w-25.text-center
           i.fas.fa-book-reader.fa-2x.text-dark
           p.text-center
