--- a/app/views/users/_unread.html.slim
+++ b/app/views/users/_unread.html.slim
@@ -1,9 +1,9 @@
 .col-md-12.col-md-12.mt-4
   .row
     - book_unreads.each do |book_unread|
-      .col-md-6
-        .card.flex-md-row.mb-4.shadow-sm.h-md-250
-          .card-body.d-flex.flex-column.align-items-start.w-100
+      .col-md-6.h-100.w-100
+        .card.flex-md-row.mb-4.shadow.border.h-md-250
+          .card-body.d-flex.flex-column.align-items-start.h-100
             strong = link_to book_unread.book.title, book_path(book_unread.book.id), class:"text-dark", local: true
             p.mb-0.small
               | 著者：
@@ -14,7 +14,7 @@
             p.mb-0.small
               = "発売日：#{book_unread.book.sales_date}"
 
-            .d-inline-flex.btn-group.btn-group-md.mt-2
+            .d-inline-flex.btn-group.btn-group-md.mt-3
               = link_to book_path(book_unread), class:"btn btn-light align-items-end" do
                 i.fas.fa-book-reader.text-dark.pr-1
                 span.text-center
@@ -24,8 +24,8 @@
                 span.text-center
                   = "#{book_unread.book.book_unreads.count}"
 
-            small.align-self-end.mt-auto
+            small.align-self-end.mt-5
               = book_unread.created_at.strftime('%Y/%m/%d')
 
-          = link_to book_path(book_unread.book.id), local: true, class:"flex-auto text-right" do
-            = image_tag book_unread.book.image_url.chomp("?_ex=200x200"), :width => '85%', class:"text-right"
+          = link_to book_path(book_unread.book.id), local: true, class:"flex-auto text-right my-auto" do
+            = image_tag book_unread.book.image_url.chomp("?_ex=200x200"), :size => "255x355"
