--- a/app/views/users/_read.html.slim
+++ b/app/views/users/_read.html.slim
@@ -1,8 +1,8 @@
-.col-md-12.col-md-12.mt-4
+.col-md-12.col-sm-12.mt-4
   .row
     - book_reads.each do |book_read|
-      .col-md-6.h-100.w-100
-        .card.flex-md-row.mb-4.shadow.border.h-md-250
+      .col-md-6.col-sm-12.h-100.w-100
+        .card.flex-row.mb-4.shadow.border.h-md-250
           .card-body.d-flex.flex-column.align-items-start
             strong = link_to book_read.book.title, book_path(book_read.book.id), class:"text-dark", local: true
             div id="rate_#{book_read.id}" class="my-1"
@@ -14,7 +14,7 @@
               = link_to book_read.book.publisher_name, books_path(author: book_read.book.publisher_name)
             p.mb-0.small
               = "発売日：#{book_read.book.sales_date}"
-            small.mt-1
+            small
               = simple_format(book_read.comment.truncate(30))
               - if book_read.comment.size > 30
                 small
