--- a/app/views/users/_unread.html.slim
+++ b/app/views/users/_unread.html.slim
@@ -1,8 +1,8 @@
-.col-md-12.col-md-12.mt-4
+.col-md-12.col-sm-12.mt-4
   .row
     - book_unreads.each do |book_unread|
-      .col-md-6.h-100.w-100
-        .card.flex-md-row.mb-4.shadow.border.h-md-250
+      .col-md-6.col-sm-12.h-100.w-100
+        .card.flex-row.mb-4.shadow.border.h-md-250
           .card-body.d-flex.flex-column.align-items-start.h-100
             strong = link_to book_unread.book.title, book_path(book_unread.book.id), class:"text-dark", local: true
             p.mb-0.small
