--- a/app/views/users/calender.html.slim
+++ b/app/views/users/calender.html.slim
@@ -8,7 +8,7 @@
                     - if book.sales_date.present? && book.sales_date > Date.today-30
                         tr
                             td = book.sales_date.strftime('%Y/%m/%d')
-                            td = link_to book.title.truncate(20), book_path(book.id), class:"text-dark"
+                            td = link_to book.title.truncate(20), book_path(book.id), class:"text-primary"
 
         .col-md-8
             .bg-white.p-3.text-center
