--- a/app/views/notifications/index.html.slim
+++ b/app/views/notifications/index.html.slim
@@ -5,7 +5,7 @@
 .container
   .row
     .col-md-8.mx-auto
-      .bg-white.text-center.py-3
+      .bg-white.text-center.shadow.border.py-3
         h3 通知
 
   - if notifications.exists?
