--- a/app/views/timelines/index.html.slim
+++ b/app/views/timelines/index.html.slim
@@ -2,7 +2,7 @@
   .row
     .col-md-12
       .col-md-10.mx-auto
-        .bg-white.text-center.py-3
+        .bg-white.text-center.shadow.border.py-3
           h3 タイムライン
 
       - if @timelines.present?
