--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -2,17 +2,16 @@
   .row
     .col-md-6.my-2
       = render "sort"
+  .row
+    .text-center.bg-white.py-3
+      - @books.each do |book|
+        = link_to books_path(book: Book.book_details(book)), method: :post, local: true, class:"col-md-2 col-sm-6 m-2" do
+          = image_tag book.large_image_url.chomp("?_ex=200x200"), :width => '20%', class:"book_index_jacket"
 
-    .text-center
-      .bg-white.py-3
-        - @books.each do |book|
-            = link_to books_path(book: Book.book_details(book)), method: :post, local: true, class:"col-md-3 col-sm-3 m-2" do
-              = image_tag book.large_image_url.chomp("?_ex=200x200"), :width => '20%'
-
-      .row.d-flex.justify-content-center.my-3.mb-5
-        - if @books.previous_page?
-          h4
-            = link_to "前のページ", books_path(keyword: @keyword, page: @page - 1), class:"btn btn-light mx-2 "
-        - if @books.next_page?
-          h4
-            = link_to "次のページ", books_path(keyword: @keyword, page: @page + 1, ), class:"btn btn-light mx-2"
+  .row.d-flex.justify-content-center.my-3.mb-5
+    - if @books.previous_page?
+      h4
+        = link_to "前のページ", books_path(keyword: @keyword, page: @page - 1), class:"btn btn-light mx-2 "
+    - if @books.next_page?
+      h4
+        = link_to "次のページ", books_path(keyword: @keyword, page: @page + 1, ), class:"btn btn-light mx-2"
