--- a/app/views/devise/confirmations/new.html.slim
+++ b/app/views/devise/confirmations/new.html.slim
@@ -1,5 +1,5 @@
 .container
-  .col-md-6.mx-auto.bg-white.shadow.p-3.mt-5
+  .col-md-6.col-sm-12.mx-auto.bg-white.shadow.p-3.mt-5
     h2.mb-4
       = t(".resend_confirmation_instructions")
 
