--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,5 +1,5 @@
 .container
-  .col-md-6.mx-auto.bg-white.shadow.p-4.mt-5
+  .col-md-6.mx-auto.bg-white.shadow.p-4.my-5
     h2.mb-4
       = "#{resource.name.to_s.humanize}のアカウント編集"
     = form_with model: @user, url: registration_path(resource_name), local: true do |f|
