--- a/app/views/notifications/_notification.html.slim
+++ b/app/views/notifications/_notification.html.slim
@@ -1,7 +1,7 @@
 - visitor = notification.visitor
 - visited = notification.visited
 
-.col-md-8.mx-auto.bg-white.border.shadow.mt-3
+.col-md-8.mx-auto.bg-white.mt-3
   .form-inline.py-2
     - case notification.action
 
