--- a/app/views/users/cancel.html.slim
+++ b/app/views/users/cancel.html.slim
@@ -2,7 +2,7 @@
   h2.text-center.py-3.my-4.bg-danger.text-white
     | 本当に退会しますか？
   .text-center
-    h4.bg-light.py-3
+    h4.bg-light.py-3.user_cancel_text
      | 退会すると、会員登録情報や <br>
       これまでの購入履歴が閲覧できなくなります。<br>
       退会する場合は、「退会する」をクリックしてください。
