--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -8,14 +8,14 @@
     .col-md-12.text-center.mt-4
       .bg-white.py-5
         = form_with model: @user, local: true do |f|
-          .d-inline-flex
-            .d-block.mr-3
+          .d-inline-flex.user_edit_flex
+            .d-block.mr-3.user_edit_jacket
               = attachment_image_tag @user, :image, :fill, 180, 180, fallback:"noimage.jpg", size: "180x180", class: "rounded-circle shadow-sm mr-4 mb-4"
               br
               small
                 = f.attachment_field :image
 
-            .d-block
+            .d-block.user_edit_input
               .form-group
                 .text-left
                   label.mr-auto for="user_name_input" ニックネーム
