--- a/app/views/homes/about.html.slim
+++ b/app/views/homes/about.html.slim
@@ -51,14 +51,13 @@
 
         .col-md-3.col-sm-3.d-inline-block.text-center.align-top
           i.fas.fa-bell.fa-5x.rounded-circle.bg-white.p-5.about_intro_orangeicon
-          .col-md-10.mx-auto
+          .col-md-11.mx-auto
             p.about_intro_orangetext.mt-3
               | 発売日に通知を受け取る
             p
-              i.far.fa-plus-square 読みたいリストに入れた本は、
-              br
-              | 発売前にメール通知、
-              i.far.fa-bell 発売当日には通知でお知らせします！
+              | 読みたいリストに入れた本は、
+                発売前にメール通知、
+                発売当日には通知でお知らせします！
 
 
         .col-md-3.col-sm-3.d-inline-block.text-center.align-top
