[add] 全体-レスポンシブ

--- a/app/views/homes/about.html.slim
+++ b/app/views/homes/about.html.slim
@@ -76,6 +76,12 @@
               | 新しい本が見つかる
             p ユーザーのレビューからさらに新しい本を見つけよう
 
+    .text-right
+      <!-- Rakuten Web Services Attribution Snippet FROM HERE -->
+      a href="https://webservice.rakuten.co.jp/" target="_blank"
+          img src="https://webservice.rakuten.co.jp/img/credit/200709/credit_22121.gif" border="0" alt="楽天ウェブサービスセンター" title="楽天ウェブサービスセンター" width="221" height="21"/
+      <!-- Rakuten Web Services Attribution Snippet TO HERE -->
+
 javascript:
   $('.about_slide_box').slick({
     autoplay:true, //自動スクロール
