--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,7 +18,7 @@ html
     link href="https://fonts.googleapis.com/css2?family=Kosugi&display=swap" rel="stylesheet"
 
   body
-    header
+    header.sticky-top
       = render "layouts/header"
     main
       = render "layouts/flash"
