--- a/app/views/books/_review.html.slim
+++ b/app/views/books/_review.html.slim
@@ -36,6 +36,7 @@
                 i.fa.fa-comments コメント#{review.read_comments.count}
 
     javascript:
+      $("#rate_#{review.id}").empty();
       $("#rate_#{review.id}").raty({
         size: 10,
         starOff: "#{asset_path('star-off.png')}",
