--- a/app/views/read_comments/create.js.erb
+++ b/app/views/read_comments/create.js.erb
@@ -1,3 +1,4 @@
 $("#book_read_comments").html("<%= j(render "book_reads/read_comments", book: @book, book_read: @book_read) %>");
 $("#book_read_comment_form")[0].reset();
 $("#comment_count").html("<%= j("#{@book_read.read_comments.count}") %>");
+$("#notice").html("コメントの投稿に成功しました");
