[fix] read-btn-fix

--- a/app/views/users/_unread.html.slim
+++ b/app/views/users/_unread.html.slim
@@ -15,12 +15,12 @@
               = "発売日：#{book_unread.book.sales_date}"
 
             .d-inline-flex.btn-group.btn-group-md.mt-3
-              = link_to book_path(book_unread), class:"btn btn-light align-items-end" do
-                i.fas.fa-book-reader.text-dark.pr-1
+              .badge.badge-light.text-dark.shadow-sm.align-items-end.p-2
+                i.fas.fa-book-reader.fa-2x.text-dark.pr-1
                 span.text-center
                   = "#{book_unread.book.book_reads.count}"
-              = link_to book_path(book_unread), class:"btn btn-light align-items-end" do
-                i.fas.fa-plus-square.text-dark.pr-1
+              .badge.badge-light.text-dark.shadow-sm.align-items-end.p-2
+                i.fas.fa-plus-square.fa-2x.text-dark.pr-1
                 span.text-center
                   = "#{book_unread.book.book_unreads.count}"
 
