--- a/app/views/users/_read.html.slim
+++ b/app/views/users/_read.html.slim
@@ -21,12 +21,12 @@
                   = link_to "続きを読む", book_book_read_path(book_read.book_id,book_read, user: book_read.user_id)
 
             .d-inline-flex.btn-group.btn-group-md.mb-2
-              = link_to book_path(book_read), class:"btn btn-light align-items-end" do
-                i.fas.fa-book-reader.text-dark.pr-1
+              .badge.badge-light.text-dark.shadow-sm.align-items-end.p-2
+                i.fas.fa-book-reader.fa-2x.text-dark.pr-1
                 span.text-center
                   = "#{book_read.book.book_reads.count}"
-              = link_to book_path(book_read), class:"btn btn-light align-items-end" do
-                i.far.fa-plus-square.text-dark.pr-1
+              .badge.badge-light.text-dark.shadow-sm.align-items-end.p-2
+                i.far.fa-plus-square.fa-2x.text-dark.pr-1
                 span.text-center
                   = "#{book_read.book.book_unreads.count}"
 
