--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -1,7 +1,7 @@
 .container
   .row
     .col-md-12
-      .bg-white.text-center.py-3
+      .bg-white.text-center.border.shadow.py-3
         h3 プロフィール編集
     = render "layouts/error_messages", obj: @user, column: :name
   .row
