[fix] 不要なコントローラ削除

--- a/app/views/notifications/index.html.slim
+++ b/app/views/notifications/index.html.slim
@@ -4,14 +4,17 @@
     - notifications = notifications.where.not(id:notification.id)
 .container
   .row
-    .col-md-8.mx-auto
-      .bg-white.text-center.shadow.border.py-3
-        h3 通知
+    .col-md-8.mx-auto.bg-white.text-center.shadow.border.py-3
+      h3 通知
 
-  - if notifications.exists?
-      = render notifications
-  - else
-      p.text-center
-          | 通知はありません
+    - if notifications.exists?
+        = render notifications
+    - else
+        p.text-center
+            | 通知はありません
+
+  .row
+    .mx-auto.my-5
+      = paginate @notifications
 
 
