--- a/app/views/homes/about.html.slim
+++ b/app/views/homes/about.html.slim
@@ -58,7 +58,7 @@
               | 読みたいリストに入れた本は、
                 発売前にメール通知、
                 発売当日には通知でお知らせします！
-
+            small ※メール通知は、プロフィール編集から設定できます
 
         .col-md-3.col-sm-3.d-inline-block.text-center.align-top
           i.fas.fa-comments.fa-5x.rounded-circle.bg-white.p-5.about_intro_blueicon
@@ -66,8 +66,6 @@
             p.about_intro_bluetext.mt-3
               | 交流する
             p フォローしてフォロユーザーの読書記録を確認しよう
-
-
 
         .col-md-3.col-sm-3.d-inline-block.text-center.align-top
           i.fas.fa-book-reader.fa-5x.rounded-circle.bg-white.p-5.about_intro_blueicon
