--- a/app/views/timelines/index.html.slim
+++ b/app/views/timelines/index.html.slim
@@ -10,5 +10,8 @@
       - else
         .col-md-10.mx-auto
           p.text-center タイムラインには何もありません
+  .row
+    .mx-auto
+      = paginate @timelines
 
 
