--- a/app/views/homes/about.html.slim
+++ b/app/views/homes/about.html.slim
@@ -69,10 +69,9 @@
               | レビューする
             p
             span
-              | 読んだ本は
+              | 読んだ本は読んだリスト
               i.fas.fa-book-reader.px-1
-              | 読んだリストに追加して、
-                レビューしよう
+              | に追加して、レビューしよう
 
         .col-md-3.col-sm-3.d-inline-block.text-center.align-top
           i.fas.fa-comments.fa-5x.rounded-circle.bg-white.p-5.about_intro_blueicon
