--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,6 +5,7 @@ html
       | BookMarks
     = csrf_meta_tags
     = csp_meta_tag
+    = favicon_link_tag(image_url("favicon.ico"))
     meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"
     script "https://kit.fontawesome.com/7b10f1e4cc.js" crossorigin="anonymous"
     script type="text/javascript" src="js/slick.min.js"
