--- a/app/views/books/_review.html.slim
+++ b/app/views/books/_review.html.slim
@@ -10,7 +10,10 @@
           .flex-column
             .d-flex.flex-row.mb-1
               = link_to user_path(review.user_id) do
-                = attachment_image_tag review.user, :image, size: "50x50", fallback: "noimage.jpg", class: "rounded-circle"
+                - if review.user.profile_image.attached?
+                  = image_tag review.user.profile_image.variant(combine_options:{gravity: :center, resize:"50x50^",crop:"50x50+0+0"}).processed, class: "rounded-circle"
+                - else
+                  = image_tag image_url("noimage.jpg"), size:"50x50", class: "rounded-circle"
               strong.flex-column.ml-3
                 = link_to "#{review.user.name}の感想・レビュー", book_book_read_path(review.book_id, review, user: review.user), class:"text-dark"
                 .small.text-muted
