--- a/app/views/notifications/_notification.html.slim
+++ b/app/views/notifications/_notification.html.slim
@@ -11,6 +11,10 @@
           .d-flex.flex-row.mb-1
             = link_to user_path(visitor) do
               = attachment_image_tag visitor, :image, size: "50x50", fallback: "noimage.jpg", class: "rounded-circle"
+              - if comment.user.profile_image.attached?
+                = image_tag comment.user.profile_image.variant(combine_options:{gravity: :center, resize:"50x50^",crop:"50x50+0+0"}).processed, class: "rounded-circle"
+              - else
+                = image_tag image_url("noimage.jpg"), size:"50x50", class: "rounded-circle"
             .flex-column.ml-3
               = link_to visitor.name, user_path(visitor), class:"text-dark"
               .small.text-muted
@@ -25,7 +29,10 @@
         .flex-column.mb-5.w-75
           .d-flex.flex-row.mb-1
             = link_to user_path(visitor) do
-              = attachment_image_tag visitor, :image, size: "50x50", fallback: "noimage.jpg", class: "rounded-circle"
+              - if visitor.profile_image.attached?
+                = image_tag visitor.profile_image.variant(combine_options:{gravity: :center, resize:"50x50^",crop:"50x50+0+0"}).processed, class: "rounded-circle"
+              - else
+                = image_tag image_url("noimage.jpg"), size:"50x50", class: "rounded-circle"
             .flex-column.ml-3
               = link_to visitor.name, user_path(visitor), class:"text-dark"
               .small.text-muted
@@ -44,7 +51,10 @@
         .flex-column.w-75
           .d-flex.flex-row.mb-4
             = link_to user_path(visitor) do
-              = attachment_image_tag visitor, :image, size: "50x50", fallback: "noimage.jpg", class: "rounded-circle"
+              - if visitor.profile_image.attached?
+                = image_tag visitor.profile_image.variant(combine_options:{gravity: :center, resize:"50x50^",crop:"50x50+0+0"}).processed, class: "rounded-circle"
+              - else
+                = image_tag image_url("noimage.jpg"), size:"50x50", class: "rounded-circle"
             .flex-column.ml-3
               = link_to visitor.name, user_path(visitor), class:"text-dark"
               .small.text-muted
@@ -69,7 +79,10 @@
         .flex-column.pb-5.w-75
           .d-flex.flex-row.mb-1
             = link_to user_path(visitor) do
-              = attachment_image_tag visitor, :image, size: "50x50", fallback: "noimage.jpg", class: "rounded-circle"
+              - if visitor.profile_image.attached?
+                = image_tag visitor.profile_image.variant(combine_options:{gravity: :center, resize:"50x50^",crop:"50x50+0+0"}).processed, class: "rounded-circle"
+              - else
+                = image_tag image_url("noimage.jpg"), size:"50x50", class: "rounded-circle"
             .flex-column.ml-3
               = link_to visitor.name, user_path(visitor), class:"text-dark"
               .small.text-muted
