--- a/app/views/timelines/_timeline.html.slim
+++ b/app/views/timelines/_timeline.html.slim
@@ -8,7 +8,10 @@
         .flex-column
           .d-flex.flex-row.mb-1
             = link_to user_path(visitor) do
-              = attachment_image_tag visitor, :image, :fill, 50, 50, fallback:"noimage.jpg", size: "50x50", class: "rounded-circle"
+              - if visitor.profile_image.attached?
+                = image_tag visitor.profile_image.variant(combine_options:{gravity: :center, resize:"50x50^",crop:"50x50+0+0"}).processed, class: "rounded-circle"
+              - else
+                = image_tag image_url("noimage.jpg"), size:"50x50", class: "rounded-circle"
             .flex-column.ml-3
               = link_to visitor.name, user_path(visitor), class:"text-dark"
               .small.text-muted
@@ -25,7 +28,10 @@
           .flex-column
             .d-flex.flex-row.mb-1
               = link_to user_path(visitor) do
-                = attachment_image_tag visitor, :image, :fill, 50, 50, fallback:"noimage.jpg", size: "50x50", class: "rounded-circle"
+                - if visitor.profile_image.attached?
+                  = image_tag visitor.profile_image.variant(combine_options:{gravity: :center, resize:"50x50^",crop:"50x50+0+0"}).processed, class: "rounded-circle"
+                - else
+                  = image_tag image_url("noimage.jpg"), size:"50x50", class: "rounded-circle"
               strong.flex-column.ml-3
                 = link_to "#{visitor.name}の感想・レビュー", book_book_read_path(timeline.book_id, timeline.book_read_id, user: visited), class:"text-dark"
                 .small.text-muted
