--- a/app/views/devise/shared/_error_messages.html.slim
+++ b/app/views/devise/shared/_error_messages.html.slim
@@ -4,7 +4,7 @@
       = I18n.t("errors.messages.not_saved",
         count: resource.errors.count,
         resource: resource.class.model_name.human.downcase)
-    ul.list-unstyled
+    ul.list-unstyled.alert.alert-danger
       - resource.errors.full_messages.each do |message|
         li
           = message
