--- a/app/views/book_tags/index.html.slim
+++ b/app/views/book_tags/index.html.slim
@@ -5,14 +5,14 @@
         h3 = "「##{params[:tag]}」タグの検索結果#{@tags.count}件"
   .row.mt-3
     .col-md-2
-      table.table.table-hover.table-bordered
+      table.table.table-bordered
         tr.thead-light
           th
-            | 人気ジャンル
+            | 人気のタグ
         - if @tag_ranking.present?
           - @tag_ranking.each do |tag|
-            tr
-              td = link_to "##{tag.name}(#{tag.count})", tag_path(tag.name), class:"text-dark"
+            tr.bg-white
+              td = link_to "##{tag.name}(#{BookRead.tags_count(tag.name)})", tag_path(tag.name), class:"text-dark"
     .col-md-10
       - @tags.each do |tag|
         .card.flex-md-row.mb-4.shadow-sm
@@ -47,8 +47,8 @@
 
             .d-block.pt-5
               i.fas.fa-tags
-              - tag.tag_counts_on(:tags).each do |tag|
-                = link_to "##{tag.name}(#{tag.taggings_count})", tag_path(tag.name), class:"badge badge-pill badge-light p-2 mt-3 mx-2"
+              - tag.tag_counts_on(:tags).most_used(5).each do |book_tag|
+                = link_to "##{book_tag.name}(#{book_tag.taggings_count})", tag_path(book_tag.name), class:"badge badge-pill badge-light p-2 mt-3 mx-2"
 
           = link_to book_path(tag.book.id), local: true, class:"flex-auto text-right" do
             = image_tag tag.book.image_url.chomp("?_ex=200x200"), :width => '220px', :height => '100%', class:"text-right ranking_book_jacket"
