--- a/app/views/books/_review.html.slim
+++ b/app/views/books/_review.html.slim
@@ -30,8 +30,8 @@
                   br
                   i.fas.fa-tags
                   - review.tag_counts_on(:tags).limit(5).each do |tag|
-                    = link_to "##{tag.name}(#{tag.taggings_count})", tag_path(tag.name), class:"badge badge-pill badge-light p-2 mt-3 mx-2"
-                  - if review.tag_list.count
+                    = link_to "##{tag.name}(#{BookRead.tags_count(tag.name)})", tag_path(tag.name), class:"badge badge-pill badge-light p-2 mt-3 mx-2"
+                  - if review.tag_list.count > 5
                     span
                       = link_to "....", book_book_read_path(review.book_id, review, user: review.user), class:"text-secondary"
 
